most up to date

--- a/app/src/main/res/layout/ob_flow_3.xml
+++ b/app/src/main/res/layout/ob_flow_3.xml
@@ -22,4 +22,10 @@
         android:layout_marginTop="380dp"
         android:layout_marginStart="165dp" />
 
+    <Button
+        android:id="@+id/complete_registration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="complete_registration" />
+
 </FrameLayout>
