--- a/app/src/main/res/layout/onboarding_activity_layout.xml
+++ b/app/src/main/res/layout/onboarding_activity_layout.xml
@@ -6,8 +6,7 @@
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container">
-
+        android:id="@+id/onboarding_instructions_container">
     </android.support.v4.view.ViewPager>
 
 </FrameLayout>
