--- a/app/src/main/res/layout/ob_instruction_2.xml
+++ b/app/src/main/res/layout/ob_instruction_2.xml
@@ -1,55 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/onboarding_background">
+    >
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/image_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+
+            android:background="@drawable/briller_logo"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"/>
+
+    </android.support.constraint.ConstraintLayout>
 
     <TextView
+        android:id="@+id/onboarding_instruction_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="100dp"
-        android:textSize="20sp"
-        android:text="Choose Your Partner"
-        android:layout_marginStart="100dp" />
+        android:layout_below="@id/image_container"
+        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="420dp"
-        android:textSize="32sp"
-        android:text="Dog"
-        android:layout_marginStart="60dp" />
+        android:text="Complete all your habits to give star energy to Ollie. Don't let him starve!"
+        android:textSize="18sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="240dp"
-        android:layout_marginTop="240dp"
-        android:textSize="32sp"
-        android:text="Cat"
-        android:layout_marginStart="240dp" />
-
-    <Button
-        android:id="@+id/f2_dog_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="360dp"
-        android:textSize="32sp"
-        android:text="+"
-        android:layout_marginStart="45dp" />
-
-    <Button
-        android:id="@+id/f2_cat_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="220dp"
-        android:layout_marginTop="180dp"
-        android:textSize="32sp"
-        android:text="+"
-        android:layout_marginStart="220dp" />
-
-
-</FrameLayout>
+</RelativeLayout>
