--- a/app/src/main/res/layout/ob_instruction_3.xml
+++ b/app/src/main/res/layout/ob_instruction_3.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/onboarding_background">
+    >
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/image_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+
+            android:background="@drawable/onboarding_dog_skinned"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"/>
+
+    </android.support.constraint.ConstraintLayout>
 
     <TextView
+        android:id="@+id/onboarding_instruction_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="320dp"
-        android:textSize="32sp"
-        android:text="Dog"
-        android:layout_marginStart="160dp" />
+        android:layout_below="@id/image_container"
+        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
 
-    <EditText
-        android:id="@+id/plain_text_input"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:inputType="text"
-        android:text="Ollie"
-        android:layout_marginLeft="165dp"
-        android:layout_marginTop="380dp"
-        android:layout_marginStart="165dp" />
+        android:text="Unlock exclusive animations and outfits for Ollie by consistently completing your habits."
+        android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/complete_registration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="complete_registration" />
-
-</FrameLayout>
+</RelativeLayout>
