--- a/app/src/main/res/layout/onboarding_activity_layout.xml
+++ b/app/src/main/res/layout/onboarding_activity_layout.xml
@@ -33,7 +33,7 @@
 
     </RelativeLayout>
 
-    <com.goats.briller.WrapContentViewPager
+    <com.goats.briller.onboarding.WrapContentViewPager
         android:layout_width="wrap_content"
         android:layout_height="550dp"
         android:id="@+id/onboarding_instruction_container"
