added some more pages (habit choose, habit physique)

--- a/app/src/main/res/layout/onboarding_activity_layout.xml
+++ b/app/src/main/res/layout/onboarding_activity_layout.xml
@@ -3,12 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/onboarding_background">
+    android:background="@drawable/app_background">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/onboarding_instruction_title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
         android:layout_marginTop="70dp">
 
         <ImageButton
@@ -18,7 +20,7 @@
             android:layout_alignTop="@id/onboarding_instruction_title"
             android:layout_toLeftOf="@id/onboarding_instruction_title"
 
-            android:background="@drawable/onboarding_instruction_back_button"
+            android:background="@drawable/app_back_button"
             android:scaleType="fitXY"/>
 
         <TextView
@@ -31,7 +33,7 @@
             android:textSize="18sp"
             />
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <com.goats.briller.onboarding.WrapContentViewPager
         android:layout_width="wrap_content"
