--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/main_navigation_home"
+        android:icon="@drawable/main_navigation_home_icon"
+        android:title="@string/main_fragment_home_icon_description"
+        />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/main_navigation_stats"
+        android:icon="@drawable/main_navigation_stats_icon"
+        android:title="@string/main_fragment_stats_icon_description" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/main_navigation_pethouse"
+        android:icon="@drawable/main_navigation_pethouse_icon"
+        android:title="@string/main_fragment_pethouse_icon_description" />
 
 </menu>
