--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="bottom_nav_icon_background">#E9D6B9</color>
+    <color name="bottom_nav_icon_background_selected">#D6B88A</color>
+
+    <color name="item_display_background">#F7D3D3</color>
+
+    <color name="item_habit_starting_blue">#F4FEFF</color>
+    <color name="item_habit_ending_blue">#AFFAFF</color>
 </resources>
