--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="textview_small_size">11sp</dimen>
+    <dimen name="textview_middle_size">13sp</dimen>
+    <dimen name="textview_big_0_size">21sp</dimen>
+    <dimen name="textview_big_1_size">30sp</dimen>
 </resources>
