--- a/app/src/main/res/layout/habit_type_choose.xml
+++ b/app/src/main/res/layout/habit_type_choose.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/habit_choose_type"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,8 +11,7 @@
     tools:context=".main.ui.home.habit.HabitType"
     >
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/onboarding_instruction_title_bar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -22,20 +22,16 @@
             android:id="@+id/habit_choose_back_button"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_alignTop="@id/onboarding_instruction_title"
-            android:layout_toLeftOf="@id/onboarding_instruction_title"
 
             android:background="@drawable/app_back_button"
             android:scaleType="fitXY"/>
 
         <TextView
-            android:id="@+id/onboarding_instruction_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
 
             android:text="@string/habit_choose"
-            android:textSize="@dimen/textview_big_1_size"
+            android:textSize="@dimen/textview_big_0_size"
             />
 
     </LinearLayout>
@@ -48,6 +44,7 @@
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:layout_marginVertical="20dp"
+        android:background="@drawable/item_habit"
         >
 
         <ImageButton
@@ -61,8 +58,19 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/habit_choose_physique"
+            android:src="@drawable/habit_physique_icon"
             android:background="@null" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/habit_choose_physique"
+            app:layout_constraintRight_toRightOf="@id/habit_choose_physique"
+            android:layout_marginTop="10dp"
+            android:text="@string/habit_physique"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="@dimen/textview_middle_size"/>
 
     </android.support.constraint.ConstraintLayout>
 
@@ -73,6 +81,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
+        android:background="@drawable/item_habit"
         >
 
         <ImageButton
@@ -86,8 +95,19 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/habit_choose_mind"
+            android:src="@drawable/habit_mind_icon"
             android:background="@null" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/habit_choose_mind"
+            app:layout_constraintRight_toRightOf="@id/habit_choose_mind"
+            android:layout_marginTop="10dp"
+            android:text="@string/habit_mind"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="@dimen/textview_middle_size"/>
 
     </android.support.constraint.ConstraintLayout>
 
