--- a/app/src/main/res/layouts/onboarding/layout/ob_welcome_screen.xml
+++ b/app/src/main/res/layouts/onboarding/layout/ob_welcome_screen.xml
@@ -23,14 +23,11 @@
         android:text="Quote"
         android:layout_marginStart="160dp" />
 
-    <Button
-        android:id="@+id/f1_button"
+    <ImageButton
+        android:id="@+id/welcome_screen_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="426dp"
-        android:textSize="32sp"
-        android:text="+"
-        android:layout_marginStart="160dp" />
+        android:background="@null"
+        android:src="@drawable/welcome_screen_button" />
 
 </FrameLayout>
