writes pet name to text file

--- a/app/src/main/res/layouts/onboarding/layout/ob_selected_cat.xml
+++ b/app/src/main/res/layouts/onboarding/layout/ob_selected_cat.xml
@@ -23,7 +23,7 @@
             android:text=" Nala" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/enter_button_cat"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="145dp"
             android:layout_height="wrap_content"
